# CS447

./: .gitignore  README.md
High-Dimensions/: .gitignore  3dplot.py  CMakeLists.txt  Makefile  README.md  main.cpp  matplotlibcpp.h  segments.cpp  sphere.cpp
NeuralNetwork/: .clang-format  .gitignore  Makefile  README.md  main.cpp  main.cu  main.h  neural_network_matrices.txt  neuralnetwork.cpp  neuralnetwork_parallel.cu  neuralnetwork_sequential.cpp  training_nn.cpp
NeuralNetwork/Network/: Makefile  Matrix.h  Network.cpp  Network.h  main.cpp
NeuralNetwork/ken/: sequential2.cpp  softmax_cross-entropy.cpp  vecAdd.cu
NeuralNetwork/pre-compiled/: neural_network_matrices1000.txt  neural_network_matrices10000.txt  neural_network_matrices10250.txt  neural_network_matrices10500.txt  neural_network_matrices10750.txt  neural_network_matrices11000.txt  neural_network_matrices11250.txt  neural_network_matrices11500.txt  neural_network_matrices11750.txt  neural_network_matrices12000.txt  neural_network_matrices12250.txt  neural_network_matrices1250.txt  neural_network_matrices12500.txt  neural_network_matrices12750.txt  neural_network_matrices13000.txt  neural_network_matrices13250.txt  neural_network_matrices13500.txt  neural_network_matrices13750.txt  neural_network_matrices14000.txt  neural_network_matrices14250.txt  neural_network_matrices14500.txt  neural_network_matrices14750.txt  neural_network_matrices1500.txt  (+217 more)
Parallel-k-NN/: .gitignore  AtomicWriter.h  CMakeLists.txt  KDTree.cpp  KDTree.h  KNearestNeighbors.cpp  KNearestNeighbors.h  Makefile  main.cpp
